Change status code for creating a job
