# docs/swagger.yaml
@@ -339,8 +339,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/database.Job'
         "400":
